--- a/Abstract_Generator_Model.ipynb
+++ b/Abstract_Generator_Model.ipynb
@@ -148,6 +148,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "TkenhppLWg-B"
    },
    "outputs": [],
@@ -454,6 +455,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "E7xA5CIoXS0G"
    },
    "outputs": [],
@@ -498,6 +500,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "MKo2IrqhXfJs"
    },
    "outputs": [],
@@ -516,6 +519,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "K10GoGXpXia4"
    },
    "outputs": [],
@@ -542,6 +546,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "YS-cttoRXnIM"
    },
    "outputs": [],
@@ -568,6 +573,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "uQ_h5wQ4XwPd"
    },
    "outputs": [],
@@ -813,6 +819,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "gvBdWresX4yR"
    },
    "outputs": [],
@@ -826,6 +833,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "ADAInMJTX7A_"
    },
    "outputs": [],
@@ -920,6 +928,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "0ThmAJmJYCVd"
    },
    "outputs": [],
@@ -971,6 +980,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "9yqFK5YaYHK3"
    },
    "outputs": [],
@@ -986,6 +996,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "c2XZJiplYJtx"
    },
    "outputs": [],
@@ -1025,6 +1036,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "hXxr6YgIYOY-"
    },
    "outputs": [],
@@ -1077,6 +1089,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "IqsSDZ3mYTGM"
    },
    "outputs": [],
@@ -1365,6 +1378,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "SlJbYJiSY1xp"
    },
    "outputs": [],
@@ -1400,14 +1414,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
