--- a/Abstract_Generator_Model_LSTM.ipynb
+++ b/Abstract_Generator_Model_LSTM.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation using stacked LSTM encoder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -148,6 +155,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "TkenhppLWg-B"
    },
    "outputs": [],
@@ -454,6 +462,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "E7xA5CIoXS0G"
    },
    "outputs": [],
@@ -498,6 +507,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "MKo2IrqhXfJs"
    },
    "outputs": [],
@@ -516,6 +526,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "K10GoGXpXia4"
    },
    "outputs": [],
@@ -542,6 +553,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "YS-cttoRXnIM"
    },
    "outputs": [],
@@ -563,11 +575,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ATTENTION LAYER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attention Layer required to remember context information. As there is no Keras implementation for Attention Layer we have found a third-party resource to aid in our model. Reference: https://github.com/thushv89/attention_keras/blob/master/layers/attention.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "uQ_h5wQ4XwPd"
    },
    "outputs": [],
@@ -697,6 +724,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ENCODER DECODER ARCHITECTURE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -813,6 +847,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "gvBdWresX4yR"
    },
    "outputs": [],
@@ -826,6 +861,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "ADAInMJTX7A_"
    },
    "outputs": [],
@@ -920,6 +956,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "0ThmAJmJYCVd"
    },
    "outputs": [],
@@ -971,6 +1008,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "9yqFK5YaYHK3"
    },
    "outputs": [],
@@ -986,6 +1024,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "c2XZJiplYJtx"
    },
    "outputs": [],
@@ -1025,6 +1064,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "hXxr6YgIYOY-"
    },
    "outputs": [],
@@ -1077,6 +1117,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "IqsSDZ3mYTGM"
    },
    "outputs": [],
@@ -1288,100 +1329,6 @@
     "from rouge import Rouge\n",
     "score = Rouge()\n",
     "score.get_scores(hypothesis, reference, avg = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
-    "colab_type": "code",
-    "id": "K4LT351hYmLk",
-    "outputId": "3cbab1bd-bcfc-4321-a029-9c7de5202c17"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]\n",
-      "0it [00:00, ?it/s]\n",
-      "0it [00:00, ?it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reading papers, cleaning, creating & pickling dataframe\n",
-    "\n",
-    "\n",
-    "def read_paper(path):\n",
-    "  \"\"\"\n",
-    "  Reads research papers and store them in a string\n",
-    "  \"\"\"\n",
-    "  f = open(path, 'r', encoding=\"utf-8\")\n",
-    "  text = str(f.read())\n",
-    "  f.close()\n",
-    "  return text\n",
-    "\n",
-    "\n",
-    "def create_dataframe(NO_INPUT_PAPERS):\n",
-    "  \"\"\"\n",
-    "  Takes number of papers to read and stores data in a dataframe\n",
-    "  \"\"\"\n",
-    "  temp_papers = []\n",
-    "  filenames = []\n",
-    "  for filename in tqdm(glob.glob(\"/content/drive/My Drive/NLP/*.txt\")[:NO_INPUT_PAPERS]):\n",
-    "      temp_papers.append(read_paper(filename))\n",
-    "      filenames.append(filename)\n",
-    "  return pd.DataFrame(list(zip(temp_papers, filenames)), columns =['text', 'filenames'])\n",
-    "\n",
-    "\n",
-    "def clean_text(text):\n",
-    "  \"\"\"\n",
-    "  Removes unwanted characters, accounting for unicode characters\n",
-    "  \"\"\"\n",
-    "  text = re.sub(\"@&#\", \" \", text)\n",
-    "  text = re.sub(\"\\n\", \" \", text)\n",
-    "  text = (text.encode('ascii', 'ignore')).decode(\"utf-8\")\n",
-    "  return text\n",
-    "\n",
-    "\n",
-    "data = create_dataframe(NO_INPUT_PAPERS = 10000)\n",
-    "\n",
-    "data['highlights'] = data['text'].progress_apply(lambda x: re.findall(r'HIGHLIGHTS(.*?)KEYPHRASES', x,  flags = re.I)[0])\n",
-    "data = data[data.highlights != '    ']\n",
-    "\n",
-    "data['body'] = data['text'].progress_apply(lambda x: re.findall(r'.*(?:abstract )(.*?)$', x,  flags = re.I)[0])\n",
-    "\n",
-    "data.to_pickle(\"/content/drive/My Drive/NLP/papers.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "SlJbYJiSY1xp"
-   },
-   "outputs": [],
-   "source": [
-    "# Function to find filename which don't have \"highlights\" in it\n",
-    "\n",
-    "\n",
-    "def file_name(NO_INPUT_PAPERS):\n",
-    "  temp_papers = []\n",
-    "  for filename in glob.glob(\"/content/drive/My Drive/NLP/*.txt\")[:NO_INPUT_PAPERS]:\n",
-    "    text = read_paper(filename)\n",
-    "    text = re.sub(\"@&#\", \" \", text)\n",
-    "    text = re.sub(\"\\n\", \" \", text)\n",
-    "    text = (text.encode('ascii', 'ignore')).decode(\"utf-8\")\n",
-    "    highlights = re.findall(r'HIGHLIGHTS(.*?)KEYPHRASES', text,  flags = re.I)\n",
-    "    if highlights == []:\n",
-    "      print(filename)"
    ]
   }
  ],
